--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body{
 	transition: all 0.5s;
 }
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
-    background-color: #000000;
+    background-color: #07ad87;
 }
 .navbar .brand{
 	color: #fff;
@@ -25,6 +25,13 @@ body{
     color: #fff;
     font-size: 20px;
 }
+.btn:focus, .btn:active:focus, .btn.active:focus, a:focus, a:hover{
+	outline: none;
+	outline-offset : 0;
+}
+/* .navbar-inverse .navbar-nav > .active > a{
+	color:  #f2d138;
+} */
 h3{
 	font-size: 40px;
     font-weight: 700;
@@ -133,14 +140,32 @@ h3{
 	margin-bottom: 10px;
 	margin-top: 5px;
 }
+#portfolio h3{
+	color: #07ad87;
+}
+#portfolio img{
+	max-width: 100%;
+	margin: 15px;
+	height: 300px;
+}
 footer.navbar{
 	margin-bottom: 0;
+}
+footer a, .info a{
+	margin: 2px 7px;
+	color: #fff;
+}
+.info .icon{
+	margin: 3px 5px 20px;
 }
  @media only screen and (min-width:320px) and (max-width : 479px) {
 
 	.fill-screen p{
 		font-size: 2.1em;
 		line-height: 40px;
+	}
+	#portfolio img {
+    	margin: 15px auto;
 	}
 }
 	
