--- a/css/style.css
+++ b/css/style.css
@@ -162,6 +162,52 @@ footer a, .info a{
 	transform: translateY(-50%);
 	padding: 5px 10px;
 }
+/* #owl-demo .owl-item div{
+	padding:5px;
+} */
+#owl-demo .owl-item div{
+  display: block;
+  width: 100%;
+  height: 300px;
+  background: #fff;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  color: #000;
+  margin-top: 10px;
+  margin-right: 5px;
+  margin-bottom: 10px;
+  text-align: left;
+  padding: 40px 20px;
+}
+.owl-item h4 {
+    color: #00a99f;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    margin: 0 0 10px 0;
+    font-size: 24px;
+    text-align: left;
+}
+.subHeading{
+	font-size: 0.9em;
+	text-transform: uppercase;
+    font-weight: 300;
+    color: #afafaf;
+    margin: 0 0 15px 0;
+}
+.owl-item p{
+    font-family: 'Montserrat', sans-serif;
+    font-size: 0.9em;
+    font-weight: 200;
+    line-height: 20px;
+    margin: 10px 0;
+}
+#work img{
+	max-width: 100%;
+	height: 300px;
+	margin-top: 10px;
+	display: block;
+}
  @media only screen and (min-width:320px) and (max-width : 479px) {
 
 	.fill-screen p{
@@ -170,6 +216,20 @@ footer a, .info a{
 	}
 	#portfolio img {
     	margin: 15px auto;
+	}
+	.subHeading{
+	font-size: 0.9em;
+	text-transform: uppercase;
+    font-weight: 300;
+    color: #afafaf;
+    margin: 0 0 15px 0;
+	}
+	.owl-item p{
+	    font-family: 'Montserrat', sans-serif;
+	    font-size: 0.9em;
+	    font-weight: 200;
+	    line-height: 20px;
+	    margin: 10px 0;
 	}
 }
 	
