--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ h3{
 /* .contact-heading{
 	border-bottom: 1px solid #058e6f;
 } */
-.contact-form h4{
+/* .contact-form h4{
 	margin-top: 10px;
 	margin-bottom: 20px;
 }
@@ -133,7 +133,7 @@ h3{
 }
 .contact-input{
 	margin-top: 20px;
-}
+} */
 .portfolio-body .content-filler:last-child .btn{
 	background-color: #058e6f;
 	border: 1px solid #058e6f;
@@ -207,6 +207,62 @@ footer a, .info a{
 	height: 300px;
 	margin-top: 10px;
 	display: block;
+}
+.info-overlay{
+  position: fixed;
+  height: 100%;
+  top: 0;
+  left: 49%;
+  background: #000;
+  opacity: 0.9;
+  transform: translateX(-49%);
+}
+.overlay-hide{
+  
+
+  width: 0;
+  visibility: hidden;
+  transition: all 0.5s;
+}
+.overlay-open{
+ 
+  visibility: visible;
+  transition: width 0.5s ease;
+  width: 100%;
+  z-index: 9999;
+}
+.btn-close{
+  position: relative;
+  right: 20px;
+  top: 20px;
+  z-index: 999;
+  pointer: cursor;
+  height: 100px;
+  width: 100px;
+  color: #fff;
+  background: #000;
+}
+.btn-close img{
+	width: 100%;
+	height: 100%;
+	display: inline-block;
+}
+.btn-close:hover{
+  color: #fff;
+}
+.contact-inner{
+	width: 80%;
+	height: 200px;
+	background: #000;
+	opacity: 0.4;
+	padding: 20px;
+	margin: 10px auto;
+}
+.contact-inner h4{
+	font-size: 22px;
+}
+.contact-inner p{
+	font-size : 18px;
 }
  @media only screen and (min-width:320px) and (max-width : 479px) {
 
