--- a/css/style.css
+++ b/css/style.css
@@ -214,7 +214,6 @@ footer a, .info a{
   top: 0;
   left: 49%;
   background: #000;
-  opacity: 0.9;
   transform: translateX(-49%);
 }
 .overlay-hide{
@@ -237,8 +236,8 @@ footer a, .info a{
   top: 20px;
   z-index: 999;
   pointer: cursor;
-  height: 100px;
-  width: 100px;
+  height: 40px;
+  width: 40px;
   color: #fff;
   background: #000;
 }
@@ -249,6 +248,33 @@ footer a, .info a{
 }
 .btn-close:hover{
   color: #fff;
+}
+.resume{
+	background: #fff;
+	width: 100%;
+	height: 100%;
+	padding: 20px;
+	color: #333;
+}
+.inner-resume{
+	width: 80%;
+	margin: 0 auto;
+	border-bottom: 1px solid #000;
+	padding: 20px;
+}
+.resume .inner-resume:nth-child(3)> div:nth-child(2) .row{
+	padding-bottom: 10px;
+	border-bottom: 1px solid #000;
+}
+.resume .inner-resume:nth-child(3)> div:nth-child(2) .row:last-child{
+	border-bottom: none;
+}
+.resume a.btn{
+	color: #fff;
+	background: #000;
+}
+.resume a{
+	color: #000;
 }
 .contact-inner{
 	width: 80%;
