--- a/css/style.css
+++ b/css/style.css
@@ -202,6 +202,11 @@ footer a, .info a{
     line-height: 20px;
     margin: 10px 0;
 }
+.owl-theme .owl-controls .owl-buttons div{
+	font-size: 15px;
+	opacity: 0.7;
+	margin: 10px 5px;
+}
 #work img{
 	max-width: 100%;
 	height: 300px;
@@ -255,13 +260,20 @@ footer a, .info a{
 	height: 100%;
 	padding: 20px;
 	color: #333;
-	overflow: scroll;
+	overflow-y: scroll;
 }
 .inner-resume{
 	width: 80%;
 	margin: 0 auto;
 	border-bottom: 1px solid #000;
 	padding: 20px;
+}
+.inner-resume>div:first-child h4{
+	font-weight: bold;
+}
+.inner-resume a{
+	text-decoration: underline;
+	font-size: 18px;
 }
 .resume .inner-resume:nth-child(3)> div:nth-child(2) .row{
 	padding-bottom: 10px;
@@ -313,6 +325,24 @@ footer a, .info a{
 	    font-weight: 200;
 	    line-height: 20px;
 	    margin: 10px 0;
+	}
+	.resume{
+		width: 100%;
+		padding: 10px;
+	}
+	.inner-resume{
+		padding: 30px 15px;
+    	width: 98%;
+	}
+	.owl-item p{
+		font-size: 0.85em;
+	}
+	footer a, .info a{
+		margin: 2px 4px;
+	}
+	.btn-close{
+		top: 0;
+		right: 5px;
 	}
 }
 	
