--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
 	color: #fff;
-	font-family: 'Open Sans Condensed', sans-serif;
+	font-family: 'Open Sans Condensed', Arial ,"sans-serif";
 	padding-top: 75px;
 	background: #000;
 }
@@ -63,13 +63,17 @@ h3{
 .fill-screen p a{
 	color: #fff;
 }
-
 #about{
 	height: auto;
 	background: #07ad87;
 }
-#about .contact-heading, .contact-heading{
+
+.headerline{
 	border-bottom: 1px solid #058e6f;
+	display: inline-block;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	padding:0 5px 12px;
 }
 .portfolio-body .content-filler:last-child{
 	background-color: #07ad87;
@@ -81,12 +85,12 @@ h3{
     width: 150px;
     margin: 10px auto;
     color: #fff;
-    border: 4px solid #fff;
+    border: 6px solid #fff;
 }
 
 .skills span{
-	font-size: 18px;
-	font-weight: 700;
+	font-size: 19px;
+	font-weight: 600;
 	display: block;
 	position: relative;
   	top: 50%;
